# tips

./: .gitignore  README.md  copier.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  references.bib  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: mkdocs.yml
cli/convert/: index.html
cli/subsample/: index.html
cli/utils/: index.html
demo/: active.nf  nextflow.config
demo/inputs/: BPNN-EKF.yml  init.lmp  label.lmp  mksfs_nacl.ipynb  pinet.yml
docs/: advanced.md  implements.md  index.md  roadmap.md  workflow.md
docs/cli/: convert.md  filter.md  overview.md  subsample.md  utils.md
docs/css/: extra.css
docs/python/: bias.md
docs/python/io/: ase.md  cp2k.md  generic.md  lammps.md  runner.md
docs/recipe/: active.md
docs/stylesheets/: extra.css
docs/workflow/: abstract.md  custom_process.md  explore.md  gromacs.md  implementation.md  lammps.md  overview.md  pinn.md  tips.md
examples/explore-nacl/: init.xyz  label.lmp  main.nf  nextflow.config
nextflow/: adaptor.nf  ase.nf  explore.nf  lammps.nf  pinn.nf  tips.nf  utils.nf
python/bias/: index.html
python/io/ase/: index.html
python/io/cp2k/: index.html
python/io/generic/: index.html
python/io/lammps/: index.html
python/io/runner/: index.html
python/tips/: cli.py  io.py
search/: search_index.json
tips/: __init__.py
tips/bias/: ase.py
tips/cli/: __init__.py  common.py  convert.py  cp2kinp.py  main.py  utils.py
tips/io/: __init__.py  ase.py  cp2k.py  cp2klog.py  dataset.py  deepmd.py  filter.py  lammps.py  pinn.py  runner.py  utils.py
