[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tips"
dynamic = ["version"]
description = "The Interatomic Potential Suite"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.6"
authors = [
    { name = "Yunqi Shao", email = "yunqi_shao@yahoo.com" },
]
dependencies = [
    "ase>=3.22",
    "click>=7.0",
    "mock>=4.0",
    "numpy>1.3.0",
    "pyyaml>=3.01",
]

[project.optional-dependencies]
doc = [
  "mkdocs-flux[full] @ git+https://github.com/yqshao/mkdocs-flux.git",
]
dev = [
  "black",
  "pinn @ git+https://github.com/teoroo-cmc/pinn.git@master",
  "mkdocs-flux[full] @ git+https://github.com/yqshao/mkdocs-flux.git",
]

[project.scripts]
tips = "tips.cli:entry"

[project.urls]
Homepage = "https://github.com/teoroo-cmc/tips"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.version]
path = "tips/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
